[gd_scene load_steps=3 format=2]

[ext_resource path="res://MapScript/Construction.gd" type="Script" id=1]

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[node name="Construction" type="Area" groups=[
"Batiment",
]]
input_capture_on_drag = true
script = ExtResource( 1 )
nom = "Bat"

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )
[connection signal="input_event" from="." to="." method="_on_Construction_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Construction_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Construction_mouse_exited"]
